--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<div class="text">
 							<h1 class="title">WORLD NEWS</h1>
 							<hr class="line">
-							<h1 class="title">Amazing places in America <span class="visit"> to visit </span></h1>
+							<h1 class="title-2-text">Amazing places in America <span class="visit"> to visit </span></h1>
 							<p class="context">
 								For some reason - this country, this city, this neighborhood, this particular street - is this place you are living a majority of youlife in.
 							</p>
@@ -149,6 +149,9 @@
 					<img class="gal-img" src="img/image2.png" alt="gallery img">
 					<h1 class="gal-tit">Dolore magna aliqua</h1>
 					<p class="gal-conte">Lorem ipsum dolor sit amet, ipsum labitur 
+						<span class="secret-continue">
+							lucilius mel id, ad has 
+						</span>
 					</p>
 					<p class="gal-conte2"> 
 					lucilius rnel 
@@ -162,6 +165,9 @@
 					<img class="gal-img" src="img/image3.png" alt="gallery img">
 					<h1 class="gal-tit">Morbi eleifend a libero</h1>
 					<p class="gal-conte">Lorem ipsum dolor sit amet, ipsum labitur 
+						<span class="secret-continue">
+							lucilius mel id, ad has 
+						</span>
 					</p>
 					<p class="gal-conte2"> 
 					lucilius rnel 
