--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/reset.css">
 </head>
 <body class="body">
-	<header>
+	<header >
 		<div class="head">
 			<h1 class="logo">LOGO</h1>
 			<nav>
@@ -19,6 +19,23 @@
 					<li><a href="#"><img src="img/img2.png"></a></li>
 				</ul>
 			</nav>
+		</div>
+		<div class="header-head">
+			<h1 class="cloock">9:41</h1>
+			<div class="mob-img">
+				<img class="cellular" src="img/cellular.png" alt="cellular">
+				</img>
+				<img class="shape" src="img/shape.png" alt="shape">
+				</img>
+				<img class="battery" src="img/battery.png" alt="battery">
+				</img>
+			</div>	
+		</div>
+		<div class="header-body">
+			<a href="index.html">
+				<img class="arr-back" src="img/aback.png" alt="arrow img"></img>
+			</a>	
+			<img class="filter-img" src="img/filter.png" alt="filter">
 		</div>
 	</header>
 	<section class="two-box">
@@ -35,45 +52,43 @@
 		</div>
 		<div class="boxes-img">
 			<div class="background-image">
+				<img  class="back-img" src="img/image5.png" alt="img">
 				<div class="context">
-				<h1 class="context-title">
-					WORLD NEWS
-				</h1>
-				<hr class="home-line"></hr>
-				<p class="home-cont">
-					Lorem ipsum dolor sit amet, in eam odio amet, vix id nullam detracto vidit.
-				</p>
-				<img src="img/avatar.png" alt="avatar pic">
+					<h1 class="context-title">
+						WORLD NEWS
+					</h1>
+					<hr class="home-line"></hr>
+					<p class="home-cont">
+						Lorem ipsum dolor sit amet, in eam odio amet, vix id nullam detracto vidit.
+					</p>
+					<img src="img/avatar.png" alt="avatar pic">
+				</div>
 			</div>
-			</div>
-			 
 			<div class="right-select-box">
-				<div>
-					<div class="date-select-box">
-						<h1 class="date-select-title">
-							Select a date
+				<div class="date-select-box">
+					<h1 class="date-select-title">
+						Select a date
+					</h1>
+					<form class="date-form">
+						<select name="date">
+							<option value="date">
+								Select...
+							</option>
+							<option value="date">
+								Select One...
+							</option>
+							<option value="date">
+								Select Two...
+							</option>
+						</select>
+						<h1 class="keyword-title">
+							Select the first keywords
 						</h1>
-						<form class="date-form">
-							<select name="date">
-								<option value="date">
-									Select...
-								</option>
-								<option value="date">
-									Select One...
-								</option>
-								<option value="date">
-									Select Two...
-								</option>
-							</select>
-							<h1 class="keyword-title">
-								Select the first keywords
-							</h1>
-							<input type="text" name="keyword">
-							<div class="search-but">
-								<a href="#">Search</a>
-							</div>
-						</form>
-					</div>
+						<input type="text" name="keyword">
+						<div class="search-but">
+							<a href="#">Search</a>
+						</div>
+					</form>
 				</div>
 			</div>
 		</div>
@@ -106,14 +121,24 @@
 	<section class="img-info">
 		<div class="img-info-box">
 			<div class="img-i">
-				<img src="img/image6.png">
+				<img  class="" src="img/image6.png">
 			</div>
 			<div class="info-p">
 				<p class="info-context1">
-					Lorem ipsum dolor sit amet consectetur adipiscing elit sodales primis, mollis viverra conubia ligula inceptos laoreet libero <br> tortor, nascetur non habitasse iaculis tempor nec egestas fames augue, platea porta integer nostra curae sed arcu. Nec ut <br> diam vulputate ante scelerisque ridiculus lobortis orci mi curae himenaeos quis, senectus curabitur ullamcorper a porttitor <br> nibh fermentum nisi cum morbi aliquam. Vitae pretium vestibulum dui gravida in potenti interdum, class rhoncus neque <br> eget magna at
+					Lorem ipsum dolor sit amet consectetur adipiscing elit sodales primis, mollis viverra conubia ligula inceptos laoreet libero <br> tortor, nascetur non habitasse iaculis tempor nec egestas fames augue, platea porta integer nostra curae sed arcu. Nec ut <br> diam vulputate ante scelerisquea 
+					nisi cum morbi fermentumaaa 
+					morbi aliquam. Vitae pretiuma vestibulumridiculus lobortis orci mi curae . Excepteuri sint
+					<span class="mobile-secret">
+					senectus curabitur ullamcorper a 
+					potenti interdum, classporttitor <br> nibh  Vitae pretium vestibulum dui gravida in potenti interdum, class rhoncus neque <br> eget magna at sint
+					</span> 
 				</p>
 				<p class="info-context2">
-					Ullamcorper porttitor non pharetra cursus nisl mollis pellentesque primis penatibus platea, dictum himenaeos eget mi <br> bibendum ad molestie aliquet curae quis quisque, nunc duis ac at elementum dui integer viverra tempus. Lacinia <br> bibendum diam senectus egestas nec molestie convallis aenean hac tempus, vivamus purus congue euismod fringilla <br> cursus donec est eu blandit platea, feugiat vitae netus orci habitant accumsan placerat morbi nostra.
+					Ullamcorper porttitor non pharetra cursus nisl mollis pellentesque primis penatibus platea, dictum himenaeos eget mi <br>
+					bibendum ad molestie aliquet
+					<span class="mobile-secret">
+					 curae quis quisque, nunc duis ac at elementum dui integer viverra tempus. Lacinia <br> bibendum diam senectus egestas
+					molestie convallis aenean hac tempus, vivamus purus congue euismod fringilla <br> cursus donec est eu blandit platea, feugiat vitae netus orci habitant accumsan placerat morbi nostra.</span>
 				</p>
 			</div>
 			<div class="secret">
