--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					</li>
 					<li class="mob-nav-ul-li li3">
 						<img class="icon" src="img/discover.png"></img>
-						<a class="mob-nav-ul-li-a" href="#">DISCOVERY</a>
+						<a class="mob-nav-ul-li-a" href="index2.html">DISCOVERY</a>
 					</li>
 					<li class="mob-nav-ul-li li4">
 						<img class="icon" src="img/photos.png"></img>
