--- a/index.html
+++ b/index.html
@@ -67,6 +67,28 @@
 						<a class="mob-nav-ul-li-a" href="#">PROFILE</a>
 					</li>
 				</ul>
+				<div class="mobile-social-side">
+					<div class="list">
+						<ul class="list-ul">
+							<li class="list-li">ABOUT</li>
+							<li class="list-li">HELP</li>
+							<li class="list-li">TERMS</li>
+							<li class="list-li">GUIDLINES</li>
+						</ul>
+						<ul class="list-ul">
+							<li class="list-li">TESTIMONIALS</li>
+							<li class="list-li">ADVERTISE</li>
+							<li class="list-li">INTEGRATIONS</li>
+							<li class="list-li">CAREERS</li>
+						</ul>
+					</div>
+					<ul class="img-ul">
+						<li class="img-li"><img class="social-li-img" src ="img/inst.png" alt="social"></img></li>
+						<li class="img-li"><img class="social-li-img" src ="img/twitter.png" alt="social"></img></li>
+						<li class="img-li"><img class="social-li-img"  src ="img/facebook.png" alt="social"></img></li>
+						<li class="img-li"><img class="social-li-img"  src ="img/path.png" alt="social"></img></li>
+					</ul>
+				</div>
 			</nav>
 			<div class="burger" id="burger" onclick="burgerClick();">
 				<div class="burger-line"></div>
