--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 						</ul>
 					</div>
 					<ul class="img-ul">
-						<li class="img-li"><img class="social-li-img" src ="img/inst.png" alt="social"></img></li>
-						<li class="img-li"><img class="social-li-img" src ="img/twitter.png" alt="social"></img></li>
-						<li class="img-li"><img class="social-li-img"  src ="img/facebook.png" alt="social"></img></li>
-						<li class="img-li"><img class="social-li-img"  src ="img/path.png" alt="social"></img></li>
+						<li class="img-li"><img class="social-li-img" src="img/inst.png" alt="social"></img></li>
+						<li class="img-li"><img class="social-li-img" src="img/twitter.png" alt="social"></img></li>
+						<li class="img-li"><img class="social-li-img"  src="img/facebook.png" alt="social"></img></li>
+						<li class="img-li"><img class="social-li-img"  src="img/path12.png" alt="social"></img></li>
 					</ul>
 				</div>
 			</nav>
