--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body class="body">
 	<header>
+		<!-- header -->
 		<div class="head">
 			<h1 class="logo">LOGO</h1>
 			<nav>
@@ -30,6 +31,7 @@
 				</ul>
 			</nav>
 		</div>
+		<!-- mobile header for 375px -->
 		<div class="mobile-head">
 			<h1 class="cloock">
 				9:41
@@ -101,6 +103,7 @@
 			<img class="img-mobile-body" src="img/avatar01.png" alt="avatar img">
 		</div>
 	</header>
+	<!-- section  1 -->
 	<section class="more-new" >
 		<div class="news" id="section">
 			<div class="left-cont">
@@ -169,6 +172,7 @@
 			</div>
 		</div>
 	</section>	
+	<!-- section 2 -->
 	<section class="gallery_information">
 		<div class="gallery">
 			<div class="gal-box">
@@ -227,6 +231,7 @@
 			</div>
 		</div>
 	</section>
+	<!-- section 3 -->
 	<section class="happening-sec">
 		<div class="big-cont" >
 			<div class="gal-box">
@@ -336,6 +341,7 @@
 			</div>
 		</div>
 	</section>
+	<!-- footer soc-media -->
 	<footer class="footer">
 		<div class="foot">
 			<div class="menu-logo">
