--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="styles/reset.css">
 </head>
 <body class="body">
-	<header >
+	<header>
+		<!-- header  -->
 		<div class="head">
 			<h1 class="logo">LOGO</h1>
 			<nav>
@@ -38,6 +39,7 @@
 			<img class="filter-img" src="img/filter.png" alt="filter">
 		</div>
 	</header>
+	<!-- section 1 -->
 	<section class="two-box">
 		<div class="box-home">
 			<div class="home-box">
@@ -93,6 +95,7 @@
 			</div>
 		</div>
 	</section>
+	<!-- section2 -->
 	<section class="about">
 		<div class="about-container">
 			<div class="about-box">
@@ -118,6 +121,7 @@
 			</div>
 		</div>
 	</section>
+	<!-- section 3 -->
 	<section class="img-info">
 		<div class="img-info-box">
 			<div class="img-i">
@@ -160,6 +164,7 @@
 			</div>
 		</div>
 	</section>
+	<!-- footer -->
 	<footer class="footer">
 		<div class="foot">
 			<div class="menu-logo">
