--- a/index2.html
+++ b/index2.html
@@ -203,7 +203,7 @@
 					<li><img src="img/inst.png"></li>
 					<li><img src="img/twitter.png"></li>
 					<li><img src="img/facebook.png"></li>
-					<li><img src="img/Path.png"></li>
+					<li><img src="img/path.png"></li>
 					</ul>
 				</div>
 			</div>
