--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="author" content="jekk18">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>asd</title>
+	<title>Unilabt</title>
 	<link rel="stylesheet"  href="styles/style.css">
 	<link rel="stylesheet"  href="styles/reset.css">
 </head>
@@ -100,7 +100,7 @@
 			<a class="logo-mobile-body">
 				LOGO
 			</a>
-			<img class="img-mobile-body" src="img/avatar01.png" alt="avatar img">
+			<img class="img-mobile-body" id="mob-avatar" src="img/avatar01.png" alt="avatar img">
 		</div>
 	</header>
 	<!-- section  1 -->
