--- a/index2.html
+++ b/index2.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>asd2</title>
+	<meta charset="UTF-8">
+	<meta property="og:url" content="url-cont..."/>
+	<meta property="og:type" content="article.." />
+	<meta property="og:title" content="myTitle.." />
+	<meta property="og:description" content="describe..." />
+	<meta property="og:image" content="img..." />
+	<meta name="description" content="Web">
+	<meta name="keywords" content="HTML,CSS,JavaScript">
+	<meta name="author" content="jekk18">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Unilab</title>
 	<link rel="stylesheet" type="text/css" href="styles/style2.css">
 	<link rel="stylesheet" type="text/css" href="styles/reset.css">
 </head>
