--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="author" content="jekk18">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Unilabt</title>
+	<title>Unilab</title>
 	<link rel="stylesheet"  href="styles/style.css">
 	<link rel="stylesheet"  href="styles/reset.css">
 </head>
